Fix scroll on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -257,6 +257,7 @@ button a{
         display: block;
         width: 100%;
         margin: 0;
+        height: auto;
     }
     #diffDrop{
         width:100%;
